# openapi.yaml
@@ -166,10 +166,30 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/TenantCreateOutputDto"
+                $ref: "#/components/schemas/TenantDto"
       summary: テナントを作成する
       tags: *a3
   /tenants/{uid}:
+    get:
+      operationId: getTenant
+      parameters:
+        - name: uid
+          required: true
+          in: path
+          description: テナントUID
+          schema:
+            type: string
+      responses:
+        "200":
+          description: テナントの詳細取得に成功
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/TenantDto"
+      security:
+        - JWT-auth: []
+      summary: テナントの詳細を取得
+      tags: *a3
     patch:
       operationId: updateTenant
       parameters:
@@ -191,7 +211,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/TenantCreateOutputDto"
+                $ref: "#/components/schemas/TenantDto"
       security:
         - JWT-auth: []
       summary: テナントを更新
@@ -1068,21 +1088,12 @@ components:
       required:
         - items
         - total
-    TenantCreateInputDto:
-      type: object
-      properties:
-        name:
-          type: string
-          description: テナント名
-          example: 介護施設A
-      required:
-        - name
-    TenantCreateOutputDto:
+    TenantDto:
       type: object
       properties:
         uid:
           type: string
-          description: テナントID
+          description: テナントUID
         name:
           type: string
           description: テナント名
@@ -1094,6 +1105,15 @@ components:
         - uid
         - name
         - createdAt
+    TenantCreateInputDto:
+      type: object
+      properties:
+        name:
+          type: string
+          description: テナント名
+          example: 介護施設A
+      required:
+        - name
     TenantUpdateInputDto:
       type: object
       properties:
